overflow fix

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -104,6 +104,7 @@ svg {
   color: @silver;
   width: 0;
   background: @navy;
+  overflow-y: scroll;
 }
 
 #trash-bin {
